File hierarchy, Results, Space preservation
All files were moved into a main /src folder.

The results page was augmented with correct indicators at the question
level.

A function string_with_spaces_preserved() was added to layout.php for
use in all pages where displayed text needs consecutive space and line
breaks preserved while accounting for html entities.

--- a/src/results.css
+++ b/src/results.css
@@ -9,10 +9,20 @@ li.unselected {
     list-style:none;
 }
 
+h3.question_header {
+    display:inline;
+    margin:0 0 0 15px;
+}
+
 div.question_body {
     position:relative;
 }
 img.correction {
     position:absolute;
     left:15px;
+}
+img.correction_indicator {
+    position:absolute;
+    width:17px;
+    left:-5px;
 }
