--- a/src/index.css
+++ b/src/index.css
@@ -139,11 +139,15 @@ form label {
 }
 
 p, h1, h2, h3, h4, form, button, table {
+    position:relative;
     margin:15px;
     font-weight:normal;
 }
 h2, h3, h4 {
     text-transform:uppercase;
+}
+div {
+    position:relative;
 }
 
 td {
