Class Regulation and Termination, Pre-registration
Feature allowing instructors to terminate their classes implemented.
Interfaces for students and instructors modified to accommodate this
possibility. Privileges/access to pages were also modified to prohibit
access specific to classes not in session, including when taking exams.
As a side effect, the results interface was updated slightly to adjust
correctness indicator positioning, bolding of the "Explanation" header,
and spacing between question results.

A "disabled" class was added to the index CSS to represent disabled
classes.

In-session classes now appear first on the instructor page.

New classes can now add students that are already registered with eXam
Center by selecting them from a dropdown list, such that students do not
have to make new accounts to access a different section of a course.

Core set of files created, core-student including a Student class used
to sort by role then name.

--- a/src/results.css
+++ b/src/results.css
@@ -16,7 +16,13 @@ h3.question_header {
 
 div.question_body {
     position:relative;
+    margin-bottom:30px;
 }
+
+.explanation {
+    font-weight:bold;
+}
+
 img.correction {
     position:absolute;
     left:15px;
@@ -25,4 +31,5 @@ img.correction_indicator {
     position:absolute;
     width:17px;
     left:-5px;
+    top:0px;
 }
