Results linked to Classes
A database design update added a class id column to the tables for
question results and answer results. The relevant PHP files were updated
to track and store the class ID from which a student taking an exam is
accessing the course content.

--- a/src/results.css
+++ b/src/results.css
@@ -8,7 +8,9 @@ li.selected {
 li.unselected {
     list-style:none;
 }
-
+div.question_header {
+    position:relative;
+}
 h3.question_header {
     display:inline;
     margin:0 0 0 15px;
