Question Creation Interface
Textareas on the course and question pages were adjusted to be resizable
in response to window size, intended to facilitate content creation at
different window sizes.

--- a/src/course.css
+++ b/src/course.css
@@ -1,9 +1,19 @@
-
 #question_form
 {
+    position:relative;
     margin-left:40px;
 }
 
 #answer_list label, #answer_list input {
     display:inline-block;
+}
+
+#question_textarea {
+    height:100px;
+}
+
+#question_textarea, #tag_textarea, #explanation_textarea {
+    width:90%;
+    overflow:auto;
+    resize:both;
 }
