--- a/src/course.css
+++ b/src/course.css
@@ -1,9 +1,11 @@
 #question_form
 {
     position:relative;
-    margin-left:40px;
 }
 
+#answer_list table {
+	width:60%;
+}
 #answer_list label, #answer_list input {
     display:inline-block;
 }
@@ -12,8 +14,12 @@
     height:100px;
 }
 
-#question_textarea, #tag_textarea, #explanation_textarea {
+#question_textarea, #tag_textarea, #explanation_textarea, textarea.answer {
     width:90%;
     overflow:auto;
     resize:both;
+}
+
+#adder {
+	margin-left:30px;
 }
