--- a/src/results.css
+++ b/src/results.css
@@ -9,11 +9,14 @@ li.unselected {
     list-style:none;
 }
 div.question_header {
+	margin-left:25px;
+	background-color: #C54B3F;
     position:relative;
 }
 h3.question_header {
     display:inline;
-    margin:0 0 0 15px;
+    margin:0 0 0 25px;
+	padding:0px;
 }
 
 div.question_body {
@@ -27,11 +30,11 @@ div.question_body {
 
 img.correction {
     position:absolute;
-    left:15px;
+    left:-10px;
 }
 img.correction_indicator {
     position:absolute;
-    width:17px;
-    left:-5px;
+    width:25px;
+    left:-30px;
     top:0px;
 }
